fix component name from Header to MainNavbar, fix alignment of searchbar

--- a/src/index.css
+++ b/src/index.css
@@ -12,14 +12,4 @@ code {
     monospace;
 }
 
-#homeIcon {
-  position: absolute;
-  right: 0px;
-}
-
-#searchBar {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
 
